<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="colorSettings"
            type="com.iancowley.businesscard.ColorSettings"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/activity_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        tools:context="com.iancowley.businesscard.SettingsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@{colorSettings.primaryColor}"
            android:elevation="10dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:title="@string/settings"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/label_primary_dark_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/primary_dark_color"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/label_primary_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_primary_dark_color"
                android:layout_marginTop="32dp"
                android:text="@string/primary_color"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/label_accent_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_primary_color"
                android:layout_marginTop="32dp"
                android:text="@string/accent_color"
                android:textSize="32sp"/>

            <Button
                android:id="@+id/button_primary_dark"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/label_primary_dark_color"
                android:background="@{colorSettings.primaryDarkColor}"/>

            <Button
                android:id="@+id/button_primary"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/label_primary_color"
                android:background="@{colorSettings.primaryColor}"/>

            <Button
                android:id="@+id/button_accent"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/label_accent_color"
                android:background="@{colorSettings.accentColor}"/>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>