<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="android.text.TextUtils"/>
        <variable
            name="businessCard"
            type="com.iancowley.businesscard.BusinessCard"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_mobile_phone"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:visibility="@{TextUtils.isEmpty(businessCard.mobilePhone) ? View.GONE : View.VISIBLE}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_phone_black_24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/text_mobile_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{businessCard.mobilePhone}"
                    android:textColor="@color/textColorPrimary"
                    tools:text="555.555.5555"/>

                <TextView
                    android:id="@+id/text_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/mobile"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_work_phone"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:visibility="@{TextUtils.isEmpty(businessCard.workPhone) ? View.GONE : View.VISIBLE}">

            <ImageView
                android:id="@+id/image_work_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_phone_black_24dp"
                android:visibility="@{TextUtils.isEmpty(businessCard.mobilePhone) ? View.VISIBLE : View.GONE}"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/text_work_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{businessCard.workPhone}"
                    android:textColor="@color/textColorPrimary"
                    tools:text="555.555.5555"/>

                <TextView
                    android:id="@+id/text_work_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/work"/>
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:background="@color/dividerGrey"/>

        <RelativeLayout
            android:id="@+id/layout_personal_email"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:visibility="@{TextUtils.isEmpty(businessCard.personalEmail) ? View.GONE : View.VISIBLE}">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/text_personal_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{businessCard.personalEmail}"
                    android:textColor="@color/textColorPrimary"
                    tools:text="someone@example.com"/>

                <TextView
                    android:id="@+id/text_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/personal"/>
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_work_email"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:visibility="@{TextUtils.isEmpty(businessCard.workEmail) ? View.GONE : View.VISIBLE}">

            <ImageView
                android:id="@+id/image_work_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_email_black_24dp"
                android:visibility="@{TextUtils.isEmpty(businessCard.personalEmail) ? View.VISIBLE : View.GONE}"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/text_email_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{businessCard.workEmail}"
                    android:textColor="@color/textColorPrimary"
                    tools:text="someone@example.com"/>

                <TextView
                    android:id="@+id/text_email_work_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/work"/>
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>
</layout>